syntax = "proto3";

package game.chat;

import "google/protobuf/timestamp.proto";

service ChatService
{
	// 양방향 스트리밍 rpc
	rpc Chat(stream ChatMessage) returns (stream ChatMessage);
	rpc GetChatHistory(GetChatHistoryRequest) returns (GetChatHistoryResponse);
}

message ChatMessage
{
	int32 sender_id = 1;
	int32 receiver_id = 2;
	string content = 3;
	google.protobuf.Timestamp timestamp = 4;

	enum MessageType {
		NORMAL = 0;
		SYSTEM = 1;
		WHISPER = 2;
	}
}

message GetChatHistoryRequest
{
	int32 limit = 1;
	google.protobuf.Timestamp since = 2;
}

message GetChatHistoryResponse
{
	// repeated : 0 ~ N개의 필드를 포함할 수 있음
	repeated ChatMessage history = 1;

}